--- a/styleseventhpage.css
+++ b/styleseventhpage.css
@@ -45,7 +45,7 @@ ul{
      font:100px Times-roman; 
      text-align:center;
      line-height:250px;  
-     background-image:url(images/nec2.jpg);
+     background-image:url(nec2.jpg);
      height:300px;
      width:1300px; 
      margin-top:5%;
